--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -81,7 +81,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="NewActionMapping_0",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="ViewChange",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=V)
 +AxisMappings=(AxisName="UpDown",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="UpDown",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="LeftRight",Scale=-1.000000,Key=A)
